--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   
     <!-- Bootstrap CSS from a CDN. This way you don't have to include the bootstrap file yourself -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-	<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
-
+<link rel="stylesheet" href="animate.css">
 <link rel="stylesheet" type="text/css" href="style2.css">
 </head>
 
@@ -20,7 +19,7 @@
 		<div class="container my-auto">
 			<div class="row">
 				<div class="col-lg-12 my-auto">
-					<h1 class="text-uppercase faded">
+					<h1 class="text-uppercase faded animated infinite bounce delay-2s">
 						<strong>The biggest startup event of the year</strong>
 					</h1>
 					<hr>
